# textpress-matt-test

./: .gitignore  README.md  hosted_plan.md  requirements.txt
backend/: .gitignore  Dockerfile  ENV.template  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py  meta.py  process.py  process_cli.py  storage.py
backend/db/: schema.sql
backend/scripts/: smoke_test.py
frontend/: .gitignore  ENV.template  README.md  index.html  package-lock.json  package.json
frontend/src/: main.tsx  styles.css
frontend/src/ui/: App.tsx  CombineReports.tsx  DropZone.tsx  InputTabs.tsx
frontend/src/utils/: api.ts
