[project]
name = "textpress-backend"
version = "0.1.0"
description = "Textpress hosted MVP backend"
requires-python = ">=3.11,<4.0"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.9",
  "pydantic>=2.7.0",
  "SQLAlchemy>=2.0.30",
  "psycopg2-binary>=2.9.9",
  "textpress>=0.1.0",  # ← Update this line to specify minimum version
  "python-dotenv>=1.0.1",
  "httpx>=0.28.0",  # ← Add this line for HTTP client
]

[tool.uv]
package = false

[tool.uv.sources]
textpress = { git = "https://github.com/jlevy/textpress.git" }